styling further improved, errors are once agian visible, margins fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,11 @@
 .container {
     display: flex;
-    background-image: linear-gradient(green, black);
+    background-image: linear-gradient(blue, black);
     width: 100%;
     height: 100%
+}
+
+.pokeball-gif {
+    width: 40%;
+    height: 40%;
 }
